# face-to-age

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: config.yaml  train.yaml
configs/data/: default.yaml
configs/dataloader/: default.yaml
configs/dataset/: utkface.yaml
configs/infer/: default.yaml
configs/logger/: mlflow.yaml
configs/logging/: default.yaml
configs/model/: default.yaml  simple.yaml
configs/paths/: default.yaml
configs/preprocessing/: image.yaml
configs/training/: default.yaml  lightning.yaml
data/: UTKFace.dvc  predict.dvc  test.dvc  train.dvc  val.dvc
face_to_age/: commands.py  commands1.py  data.py  dataset.py  infer.py  lightning.py  logger.py  model.py  model_1.py  train.py  train1.py
preds/: predictions.csv
scripts/: split_utkface.py
utils/: dvc_utils.py  predictions.py  split_utkface.py
